# Envelope

./: .dockerignore  .env  Cargo.toml  Dockerfile  configuration.yaml
.sqlx/: query-a946b569748ff59113427136fba7ee81ba22322238bfef6db5dd33ddfe42f247.json
config/: base.yaml  local.yaml  production.yaml
migrations/: 20251107081333_create_subscription_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
