[package]
name = "newslatter"
version = "0.1.0"
authors = ["James Muriuki <geniusinrust@gmail.com"]
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock"]}
actix-web = "4.11.0"
reqwest = "0.12.24"
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
config = "~0.15.0"
uuid = { version = "1.18.1", features = ["v4"] }

[dependencies.sqlx]
version = "~0.8.0"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "chrono",
  "uuid",
  "migrate",
]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newslatter"
