[package]
name = "newslatter"
version = "0.1.0"
authors = ["James Muriuki <geniusinrust@gmail.com"]
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock"]}
actix-web = "4.11.0"
reqwest = "0.12.24"
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
config = "~0.15.0"
uuid = { version = "1.18.1", features = ["v4"] }
env_logger = "0.11.8"
once_cell = "1.21.3"
tracing-log = "0.2.0"
tracing-bunyan-formatter = "0.3.10"
tracing-subscriber = "0.3.20"
tracing = "0.1.41"
log = "0.4.28"
secrecy = "0.10.3"
tracing-actix-web = "0.7.19"

[dependencies.sqlx]
version = "~0.8.0"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "chrono",
  "uuid",
  "migrate",
]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newslatter"
