[package]
name = "envelope"
version = "0.1.0"
authors = ["James Muriuki <geniusinrust@gmail.com"]
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
actix-web = "4.11.0"
reqwest = "0.12.24"
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
config = "~0.15.0"
uuid = { version = "1.18.1", features = ["v4"] }
env_logger = "0.11.8"
once_cell = "1.21.3"
tracing-log = "0.2.0"
tracing-bunyan-formatter = "0.3.10"
tracing-subscriber = { version = "0.3.20", features = [
  "registry",
  "env-filter",
] }
tracing = { version = "0.1.41", features = ["log"] }
log = "0.4.28"
secrecy = { version = "0.10.3", features = ["serde"] }
tracing-actix-web = "0.7.19"
unicode-segmentation = "1.12.0"
validator = "0.20.0"

[dependencies.sqlx]
version = "~0.8.0"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "chrono",
  "uuid",
  "migrate",
]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newslatter"

[dev-dependencies]
claims = "0.8.0"
fake = "4.4.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
